--- a/css/style.css
+++ b/css/style.css
@@ -38,6 +38,7 @@ a {
   margin: 0 auto;
   padding: 10px 26px;
 }
+
 .container-map {
   width: 1200px;
   margin: 0 auto;
@@ -157,6 +158,7 @@ header li {
   font-weight: 700;
   font-size: 32px;
 }
+
 .berries-box {
   display: flex;
   flex-direction: row;
@@ -170,7 +172,7 @@ header li {
   background-image: url("../img/raspeberry.png");
   background-repeat: no-repeat;
   width: 560px;
-  margin-right:25px ;
+  margin-right: 25px;
 }
 
 
@@ -193,7 +195,7 @@ header li {
   background-color: #7f5c4d;
   background-image: url("../img/chocolate-back.png");
   background-repeat: no-repeat;
-    width: 560px;
+  width: 560px;
 }
 
 
@@ -220,8 +222,9 @@ header li {
   margin: 0 -13px;
 
 }
+
 .ice-cream-main li {
- width: 267px;
+  width: 267px;
   text-align: center;
   margin: 0 13px 40px;
 }
@@ -265,6 +268,7 @@ header li {
   margin-bottom: 40px;
 
 }
+
 .advantages-list {
   display: flex;
   flex-direction: row;
@@ -279,9 +283,11 @@ header li {
   font-weight: 500;
 
 }
+
 .advantages .first-block {
   margin-right: 26px;
 }
+
 .advantages .first-line {
   margin-bottom: 35px;
 }
@@ -292,7 +298,7 @@ header li {
   font-size: 14px;
   list-style: none;
   width: 475px;
-  
+
 
 
 }
@@ -341,10 +347,11 @@ header li {
 
 /*   MAP */
 .adress-info {
-padding: 0;
-margin: 0;
+  padding: 0;
+  margin: 0;
 
 }
+
 .place {
   font-size: 14px;
   font-weight: 400;
@@ -449,7 +456,7 @@ footer li {
   color: #000000;
   background-color: #ffffff;
   font-size: 14px;
-  font-weight: 500;
+  font-weight: 600;
 }
 
 .basket {
@@ -498,6 +505,7 @@ main li {
 
 .timing .phone-number {
   font-size: 22px;
+  color: #ffffff;
 }
 
 .transition {
@@ -539,12 +547,35 @@ main li {
 }
 
 
-}
+
 /* SORT */
 .sort-flexbox {
   display: flex;
   flex-direction: row;
+  justify-content: space-between;
+  align-items: flex-start;
   flex-wrap: wrap;
+  width: 853px;
+}
+
+.sort-flexbox>div {
+  min-height: 57px;
+}
+
+.price-rate {
+  width: 193px;
+}
+
+.price-range {
+  width: 218px;
+}
+
+.fatness {
+  width: 411px;
+}
+
+.fillers {
+  width: 703px;
 }
 
 .sorting {
@@ -590,13 +621,22 @@ main li {
 }
 
 .sort-list {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
   background-color: #aabab0;
+  margin: 0;
 }
 
 .catalog-button {
   border: 2px solid #ffffff;
   background-color: #aabab0;
   color: #ffffff;
+}
+
+.sort-butn {
+  align-self: center;
+
 }
 
 /* Ice Cream List */
@@ -651,9 +691,11 @@ main li {
 
 
 }
+
 .page-number li {
-margin-left: 22px;
+  margin-left: 22px;
 }
+
 .page-number a {
   font-weight: 500;
   font-size: 14px;
